--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src="https://unpkg.com/docx@7.8.2/build/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
+    <!-- HTML to PDF (for fixed-form PDF export) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
     <style>
         .loader { border-top-color: #3498db; -webkit-animation: spinner 1.5s linear infinite; animation: spinner 1.5s linear infinite; }
         @keyframes spinner { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
@@ -331,7 +334,7 @@
     <div id="exportPreviewModal" class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm z-[65] hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-5xl flex flex-col max-h-[90vh]">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-xl">
-                <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-clipboard-check text-blue-600 mr-2"></i> Xác nhận nội dung xuất (DOCX)</h3>
+                <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-clipboard-check text-blue-600 mr-2"></i> Xác nhận nội dung xuất (DOCX / PDF)</h3>
                 <button onclick="exportManager.closePreview()" class="text-slate-400 hover:text-slate-600"><i class="fas fa-times"></i></button>
             </div>
             <div class="p-5 overflow-auto flex-grow custom-scrollbar">
@@ -339,10 +342,14 @@
             </div>
             <div class="p-4 border-t border-slate-200 bg-slate-50 flex justify-end gap-2 rounded-b-xl">
                 <button onclick="exportManager.cancelPreview()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-medium hover:bg-slate-50">Quay lại</button>
+                <button onclick="exportManager.confirmPdf()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-bold text-slate-700 hover:bg-slate-50"><i class="fas fa-file-pdf mr-1 text-red-600"></i> Xuất PDF</button>
                 <button onclick="exportManager.confirmExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xác nhận xuất DOCX</button>
             </div>
         </div>
     </div>
+
+    <!-- Hidden PDF export root -->
+    <div id="pdfExportRoot" class="hidden"></div>
 
     <!-- CONFLICT / IMPORT RESULT MODAL -->
     <div id="importResultModal" class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm z-[80] hidden flex items-center justify-center p-4">
@@ -795,6 +802,6 @@
     </div>
 
 <!-- MAIN SCRIPT -->
-    <script src="app.min.js?v=1" defer></script>
+    <script src="app.min_v2_mobile_pdf_final2.js?v=1" defer></script>
 </body>
 </html>
