--- a/index.html
+++ b/index.html
@@ -802,6 +802,6 @@
     </div>
 
 <!-- MAIN SCRIPT -->
-    <script src="app.min_v5_pdf_sharp.js?v=1" defer></script>
+    <script src="app.min_v10_mobile_pdf_fix4.js?v=1" defer></script>
 </body>
 </html>
