--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class=\"bg-gradient-mesh\" aria-hidden=\"true\"></div>
 
 <!-- Global Loading -->
-    <div id="loadingOverlay" class="fixed inset-0 bg-white/95 dark:bg-slate-950/85 z-[60] flex items-center justify-center hidden">
+    <div id="loadingOverlay" class="fixed inset-0 bg-white dark:bg-slate-950 z-[60] flex items-center justify-center hidden">
         <div class="flex flex-col items-center">
             <div class="loader ease-linear rounded-full border-4 border-t-4 border-blue-600 h-10 w-10 mb-3"></div>
             <p id="loadingText" class="text-slate-600 font-semibold text-sm animate-pulse">Đang xử lý...</p>
@@ -390,7 +390,7 @@
     <!-- MODALS -->
 
     <!-- REPORT MODAL -->
-    <div id="reportModal" class="fixed inset-0 bg-slate-950/90 z-50 hidden flex items-center justify-center p-4">
+    <div id="reportModal" class="fixed inset-0 bg-slate-950 z-50 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-lg shadow-2xl w-full max-w-md flex flex-col">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-lg">
                 <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-chart-bar text-purple-600 mr-2"></i> Báo Cáo Số Liệu</h3>
@@ -452,7 +452,7 @@
     </div>
 
     <!-- Export DOCX Modal (Existing) -->
-    <div id="exportModal" class="fixed inset-0 bg-slate-950/90 z-50 hidden flex items-center justify-center p-4">
+    <div id="exportModal" class="fixed inset-0 bg-slate-950 z-50 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-lg shadow-2xl w-full max-w-sm flex flex-col">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-lg">
                 <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-file-word text-blue-600 mr-2"></i> Xuất Kế Hoạch (DOCX)</h3>
@@ -480,7 +480,7 @@
 
 
     <!-- Export Preview Modal -->
-    <div id="exportPreviewModal" class="fixed inset-0 bg-slate-950/90 z-[65] hidden flex items-center justify-center p-4">
+    <div id="exportPreviewModal" class="fixed inset-0 bg-slate-950 z-[65] hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-5xl flex flex-col max-h-[90vh]">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-xl">
                 <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-clipboard-check text-blue-600 mr-2"></i> Xác nhận nội dung xuất (DOCX / PDF)</h3>
@@ -501,7 +501,7 @@
     <div id="pdfExportRoot" class="hidden"></div>
 
     <!-- CONFLICT / IMPORT RESULT MODAL -->
-    <div id="importResultModal" class="fixed inset-0 bg-slate-950/90 z-[80] hidden flex items-center justify-center p-4">
+    <div id="importResultModal" class="fixed inset-0 bg-slate-950 z-[80] hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl flex flex-col max-h-[90vh]">
             <div class="p-5 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-xl">
                 <h3 class="font-bold text-slate-800 text-lg">Kết quả Import</h3>
@@ -536,7 +536,7 @@
     </div>
 
     <!-- User Modal -->
-    <div id="userModal" class="fixed inset-0 bg-slate-950/90 z-50 hidden flex items-center justify-center p-4">
+    <div id="userModal" class="fixed inset-0 bg-slate-950 z-50 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-lg shadow-2xl w-full max-w-sm flex flex-col">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-lg">
                 <h3 class="font-bold text-slate-800 text-sm"><span id="userModalTitle">Thêm User Mới</span></h3>
@@ -558,7 +558,7 @@
     </div>
 
     <!-- Import Modal -->
-        <div id="importModal" class="fixed inset-0 bg-slate-950/90 z-50 hidden flex items-center justify-center p-3 sm:p-4">
+        <div id="importModal" class="fixed inset-0 bg-slate-950 z-50 hidden flex items-center justify-center p-3 sm:p-4">
         <div class="bg-white rounded-2xl shadow-2xl w-full max-w-3xl flex flex-col max-h-[92vh]">
             <div class="px-5 py-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-2xl">
                 <h3 class="font-bold text-slate-800 text-base flex items-center gap-2">
@@ -657,7 +657,7 @@
 
 
     <!-- Group Edit Modal (Admin) -->
-    <div id="groupEditModal" class="fixed inset-0 bg-slate-950/90 z-[55] hidden flex items-center justify-center p-4">
+    <div id="groupEditModal" class="fixed inset-0 bg-slate-950 z-[55] hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-lg flex flex-col">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-xl">
                 <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-edit text-blue-600 mr-2"></i> Sửa thông tin Giàn / NVSX / Công việc</h3>
@@ -692,7 +692,7 @@
     <!-- Hidden Datalist for Admin -->
     <datalist id="allOrgsDatalist"></datalist>
 
-        <div id="editPersonModal" class="fixed inset-0 bg-slate-950/90 z-50 hidden flex items-center justify-center p-3 sm:p-4">
+        <div id="editPersonModal" class="fixed inset-0 bg-slate-950 z-50 hidden flex items-center justify-center p-3 sm:p-4">
         <div class="bg-white rounded-2xl shadow-2xl w-full max-w-5xl flex flex-col max-h-[92vh]">
             <div class="px-5 py-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-2xl">
                 <h3 class="font-bold text-slate-800 flex items-center gap-2">
@@ -847,7 +847,7 @@
 
     
     <!-- WARNING CENTER MODAL -->
-    <div id="warningModal" class="fixed inset-0 bg-black/70 z-[65] hidden items-center justify-center p-4">
+    <div id="warningModal" class="fixed inset-0 bg-black z-[65] hidden items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-5xl overflow-hidden border border-slate-200">
             <div class="p-4 border-b border-slate-200 flex items-center justify-between bg-slate-50">
                 <div>
@@ -888,7 +888,7 @@
     </div>
 
     <!-- AUDIT LOG MODAL -->
-    <div id="auditModal" class="fixed inset-0 bg-black/70 z-[65] hidden items-center justify-center p-4">
+    <div id="auditModal" class="fixed inset-0 bg-black z-[65] hidden items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-6xl overflow-hidden border border-slate-200 max-h-[90vh] flex flex-col">
             <div class="p-4 border-b border-slate-200 flex items-center justify-between bg-slate-50">
                 <div>
