--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 </head>
 <body class="bg-slate-50 text-slate-800 font-sans h-screen flex flex-col overflow-hidden">
     <!-- Background (dark mode mesh) -->
-    <div class=\"bg-gradient-mesh\" aria-hidden=\"true\"></div>
+    <div class="bg-gradient-mesh" aria-hidden="true"></div>
 
 <!-- Global Loading -->
     <div id="loadingOverlay" class="fixed inset-0 bg-white dark:bg-slate-950 z-[60] flex items-center justify-center hidden">
@@ -271,7 +271,6 @@
                     <div class="flex space-x-1">
                         <button onclick="app.showDashboard()" class="px-3 py-1.5 text-sm font-medium text-slate-600 hover:text-blue-600 hover:bg-blue-50 rounded-md transition"><i class="fas fa-calendar-alt mr-2"></i>Kế hoạch</button>
                         <button id="navSettings" onclick="app.showSettings()" class="hidden px-3 py-1.5 text-sm font-medium text-slate-600 hover:text-blue-600 hover:bg-blue-50 rounded-md transition"><i class="fas fa-cogs mr-2"></i>Cấu hình</button>
-                        <button 
                         <button id="themeToggle" type="button" aria-pressed="false"
                             class="theme-toggle-btn mr-1" title="Đổi chế độ sáng/tối">
                             <i class="fa-solid fa-moon"></i>
@@ -481,7 +480,7 @@
 
     <!-- Export Preview Modal -->
     <div id="exportPreviewModal" class="fixed inset-0 bg-slate-950 z-[65] hidden flex items-center justify-center p-4">
-        <div class="bg-white rounded-xl shadow-2xl w-full max-w-5xl flex flex-col max-h-[90vh]">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-5xl flex flex-col max-h-[92vh]">
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-xl">
                 <h3 class="font-bold text-slate-800 text-sm flex items-center"><i class="fas fa-clipboard-check text-blue-600 mr-2"></i> Xác nhận nội dung xuất (DOCX / PDF)</h3>
                 <button onclick="exportManager.closePreview()" class="text-slate-400 hover:text-slate-600"><i class="fas fa-times"></i></button>
@@ -502,7 +501,7 @@
 
     <!-- CONFLICT / IMPORT RESULT MODAL -->
     <div id="importResultModal" class="fixed inset-0 bg-slate-950 z-[80] hidden flex items-center justify-center p-4">
-        <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl flex flex-col max-h-[90vh]">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl flex flex-col max-h-[92vh]">
             <div class="p-5 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-xl">
                 <h3 class="font-bold text-slate-800 text-lg">Kết quả Import</h3>
                 <button onclick="document.getElementById('importResultModal').classList.add('hidden'); document.getElementById('importResultModal').classList.remove('flex')" class="text-slate-400 hover:text-slate-600 transition"><i class="fas fa-times"></i></button>
@@ -559,7 +558,7 @@
 
     <!-- Import Modal -->
         <div id="importModal" class="fixed inset-0 bg-slate-950 z-50 hidden flex items-center justify-center p-3 sm:p-4">
-        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-3xl flex flex-col max-h-[92vh]">
+        <div class="bg-white rounded-2xl shadow-2xl w-[96vw] max-w-6xl 2xl:max-w-7xl flex flex-col max-h-[92vh]">
             <div class="px-5 py-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 rounded-t-2xl">
                 <h3 class="font-bold text-slate-800 text-base flex items-center gap-2">
                     <i class="fas fa-file-excel text-emerald-600"></i>Import Danh sách
@@ -582,9 +581,20 @@
                     <select id="importOrgSelect" class="w-full border rounded-lg px-3 py-2 mt-1 bg-white"></select>
                 </div>
 
+                <div class="flex flex-wrap items-center gap-2">
+                    <button id="impTabExcel" type="button" onclick="importModal.switchMode('excel')" class="px-3 py-1.5 rounded-lg text-xs font-bold bg-emerald-600 text-white shadow-sm">
+                        Import từ Excel
+                    </button>
+                    <button id="impTabForm" type="button" onclick="importModal.switchMode('form')" class="px-3 py-1.5 rounded-lg text-xs font-bold bg-white border border-slate-200 text-slate-700 hover:bg-slate-100">
+                        Nhập nhanh (giống mẫu Excel)
+                    </button>
+                    <span class="text-[11px] text-slate-500 italic">* Form nhanh hỗ trợ dán bảng từ Excel (Ctrl+C / Ctrl+V).</span>
+                </div>
+
+
                                 <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
                     <!-- Dropzone (compact) -->
-                    <div class="relative group md:col-span-2 border-2 border-dashed border-slate-300 rounded-xl p-2 h-[64px] flex flex-col items-center justify-center text-center bg-white hover:border-blue-400 hover:bg-blue-50/30 transition">
+                    <div id="excelDropzoneWrap" class="relative group md:col-span-2 border-2 border-dashed border-slate-300 rounded-xl p-2 h-[64px] flex flex-col items-center justify-center text-center bg-white hover:border-blue-400 hover:bg-blue-50/30 transition">
                         <input type="file" id="excelFile" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-10" accept=".xlsx, .xls">
                         <div class="group-hover:scale-[1.01] transition transform duration-200">
                             <i class="fas fa-cloud-upload-alt text-lg text-slate-300 mb-1"></i>
@@ -600,25 +610,82 @@
                             <div>
                                 <span class="text-slate-500 text-xs uppercase font-bold">Ngày ĐK</span>
                                 <input id="prevDateInput" class="mt-1 w-full border border-slate-200 rounded-lg px-3 py-2 text-sm font-semibold text-slate-800 bg-white" placeholder="dd/mm/yyyy" value="" />
+                                <p class="text-[11px] text-slate-500 mt-1">Định dạng bắt buộc: <span class="font-bold">dd/mm/yyyy</span> (VD: 28/12/2025).</p>
                             </div>
                             <div>
                                 <span class="text-slate-500 text-xs uppercase font-bold">Nơi đến</span>
-                                <input id="prevDestInput" class="mt-1 w-full border border-slate-200 rounded-lg px-3 py-2 text-sm font-semibold text-slate-800 bg-white" placeholder="Bắt buộc nhập Nơi đến (Giàn/Tàu)..." value="" />
+                                <div class="mt-1 flex gap-2">
+                                    <select id="prevDestType" class="w-28 px-3 py-2 rounded-xl border border-slate-200 focus:outline-none focus:ring-2 focus:ring-emerald-200 focus:border-emerald-400 font-bold text-slate-800 bg-white">
+                                        <option value="GIÀN">GIÀN</option>
+                                        <option value="TÀU" selected>TÀU</option>
+                                    </select>
+                                    <input id="prevDestNameInput" class="flex-1 px-3 py-2 rounded-xl border border-slate-200 focus:outline-none focus:ring-2 focus:ring-emerald-200 focus:border-emerald-400 font-bold text-slate-800 bg-white" placeholder="Nhập tên địa điểm (VD: CTK-3 / HOÀNG SA)..." value="" />
+                                </div>
+                                <input id="prevDestInput" type="hidden" value="" />
+                                <p class="text-[11px] text-slate-500 mt-1">Chọn <span class="font-bold">GIÀN/TÀU</span> + nhập địa điểm. Ví dụ: chọn <span class="font-bold">GIÀN</span> và nhập <span class="font-bold">CTK-3</span> → dữ liệu sẽ là <span class="font-bold">GIÀN CTK-3</span>.</p>
                             </div>
                             <div class="sm:col-span-2">
                                 <span class="text-slate-500 text-xs uppercase font-bold">NVSX</span>
                                 <input id="prevNVSXInput" class="mt-1 w-full border border-slate-200 rounded-lg px-3 py-2 text-sm font-semibold text-slate-800 bg-white" placeholder="VD: 501-25; 502-25; 503-25" value="" />
+                                <p class="text-[11px] text-slate-500 mt-1">Các NVSX cách nhau bởi dấu <span class="font-bold">;</span> (VD: 001-25; 002-25; 003-25).</p>
                             </div>
                             <div class="sm:col-span-2">
                                 <span class="text-slate-500 text-xs uppercase font-bold">Công việc</span>
-                                <textarea id="prevTaskInput" rows="5" class="mt-1 w-full border border-slate-200 bg-white rounded-xl text-slate-700 font-mono p-3 text-sm leading-relaxed resize-y" placeholder="Nội dung công việc..."></textarea>
-                                <p class="text-[11px] text-slate-500 mt-2 italic">Có thể sửa Ngày ĐK / Nơi đến / NVSX / Công việc trước khi bấm <b>Xác nhận Import</b>.</p>
+                                <textarea id="prevTaskInput" rows="5" class="mt-1 w-full border border-slate-200 bg-white rounded-xl text-slate-700 font-mono p-3 text-sm leading-relaxed resize-y" placeholder="Mỗi NVSX nằm 1 dòng theo cấu trúc:
+001-25: nội dung của nvsx
+002-25: nội dung của nvsx" ></textarea>
+                                <p class="text-[11px] text-slate-500 mt-1 whitespace-pre-line">Nội dung công việc: <span class="font-bold">mỗi NVSX phải nằm 1 dòng</span> theo mẫu:
+001-25: nội dung của nvsx
+002-25: nội dung của nvsx</p>
                             </div>
                         </div>
 
                         <div class="flex flex-wrap justify-between items-center border-t border-slate-200 mt-3 pt-3 gap-2">
                             <span class="text-slate-700 font-semibold">Tìm thấy: <strong id="prevCount" class="text-blue-600 text-lg">0</strong> người</span>
                             <span id="prevWarning" class="text-red-600 font-bold hidden text-xs bg-red-50 px-2 py-1 rounded-lg border border-red-100">Sai ngày!</span>
+                        </div>
+                    </div>
+
+                    
+                    <!-- Quick Form People (full-width) -->
+                    <div id="formPeopleWrap" class="hidden md:col-span-12 bg-white rounded-2xl border border-slate-200 overflow-hidden">
+                        <div class="px-4 py-3 bg-slate-50 border-b border-slate-200 flex flex-wrap items-center justify-between gap-2">
+                            <div class="text-sm font-bold text-slate-700">Nhập nhanh danh sách nhân sự</div>
+                            <div class="flex items-center gap-2">
+                                <button type="button" onclick="importModal.addFormRow(1)" class="px-3 py-1.5 bg-white border border-slate-200 rounded-lg text-xs font-bold hover:bg-slate-100 transition">+ Thêm dòng</button>
+                                <button type="button" onclick="importModal.clearFormRows()" class="px-3 py-1.5 bg-white border border-slate-200 rounded-lg text-xs font-bold hover:bg-slate-100 transition">Xóa hết</button>
+                            </div>
+                        </div>
+                        <div class="p-4 space-y-3">
+                            <div>
+                                <label class="text-[11px] font-bold text-slate-500 uppercase">Dán nhanh từ Excel</label>
+                                <textarea id="formPasteBox" rows="3" class="w-full border border-slate-200 rounded-lg px-3 py-2 text-xs font-mono focus:ring-1 focus:ring-blue-500 outline-none bg-white" placeholder="Copy từ file maudangkydibien.xlsx (cột B→M, bỏ cột STT) rồi dán vào đây (Ctrl+V). Mỗi dòng = 1 người."></textarea>
+                                <p class="text-[11px] text-slate-500 mt-1 italic">Cột theo mẫu: Danh số | Họ tên | Chức danh | Ngày sinh | Nơi sinh | SĐT | CCCD | Ngày cấp | Hết hạn | Cân nặng | Hành lý | Hàng hóa | Ghi chú</p>
+                            </div>
+                            <div class="max-h-[48vh] lg:max-h-[55vh] overflow-auto border border-slate-100 rounded-xl">
+                                <table class="w-full text-xs">
+                                    <thead class="bg-slate-50 sticky top-0">
+                                        <tr class="text-slate-600">
+                                            <th class="px-2 py-2 text-left w-10">#</th>
+                                            <th class="px-2 py-2 text-left w-28">Danh số</th>
+                                            <th class="px-2 py-2 text-left min-w-[180px]">Họ và tên</th>
+                                            <th class="px-2 py-2 text-left w-40">Chức danh</th>
+                                            <th class="px-2 py-2 text-left w-24">Ngày sinh</th>
+                                            <th class="px-2 py-2 text-left min-w-[120px]">Nơi sinh</th>
+                                            <th class="px-2 py-2 text-left w-28">SĐT</th>
+                                            <th class="px-2 py-2 text-left w-36">CCCD/CMND</th>
+                                            <th class="px-2 py-2 text-left w-24">Ngày cấp</th>
+                                            <th class="px-2 py-2 text-left w-24">Hết hạn</th>
+                                            <th class="px-2 py-2 text-left w-20">Cân nặng</th>
+                                            <th class="px-2 py-2 text-left w-20">Hành lý</th>
+                                            <th class="px-2 py-2 text-left w-20">Hàng hóa</th>
+                                            <th class="px-2 py-2 text-left w-24">Ghi chú</th>
+                                            <th class="px-2 py-2 text-left w-10"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="formPeopleBody" class="divide-y divide-slate-100"></tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
 
@@ -889,7 +956,7 @@
 
     <!-- AUDIT LOG MODAL -->
     <div id="auditModal" class="fixed inset-0 bg-black z-[65] hidden items-center justify-center p-4">
-        <div class="bg-white rounded-xl shadow-2xl w-full max-w-6xl overflow-hidden border border-slate-200 max-h-[90vh] flex flex-col">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-6xl overflow-hidden border border-slate-200 max-h-[92vh] flex flex-col">
             <div class="p-4 border-b border-slate-200 flex items-center justify-between bg-slate-50">
                 <div>
                     <div class="text-lg font-extrabold text-slate-800"><i class="fas fa-clipboard-list text-blue-600 mr-2"></i>Nhật ký thao tác</div>
