--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     
     <!-- SheetJS & Docx -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx-js-style@1.2.0/dist/xlsx.bundle.js"></script>
     <script src="https://unpkg.com/docx@7.8.2/build/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
@@ -491,7 +491,8 @@
             <div class="p-4 border-t border-slate-200 bg-slate-50 flex justify-end gap-2 rounded-b-xl">
                 <button onclick="exportManager.cancelPreview()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-medium hover:bg-slate-50">Quay lại</button>
                 <button onclick="exportManager.confirmPdf()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-bold text-slate-700 hover:bg-slate-50"><i class="fas fa-file-pdf mr-1 text-red-600"></i> Xuất PDF</button>
-                <button onclick="exportManager.confirmExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xác nhận xuất DOCX</button>
+                                <button onclick="exportManager.confirmBaydi()" class="px-4 py-2 bg-emerald-600 hover:bg-emerald-700 text-white rounded text-sm font-bold shadow-sm"><i class="fas fa-file-excel mr-1"></i> Xuất Template BayDi</button>
+<button onclick="exportManager.confirmExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xác nhận xuất DOCX</button>
             </div>
         </div>
     </div>
