--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         <i class="fas fa-ship text-sm"></i>
                     </div>
                     <div class="flex flex-col justify-center">
-                        <h1 class="text-sm font-bold text-slate-800 leading-none">ĐIỀU ĐỘ BIỂN</h1>
+                        <h1 class="text-sm font-bold text-slate-800 leading-none">ĐIỀU ĐỘ XNXL</h1>
                         <span id="userBadge" class="text-[10px] font-semibold text-slate-500 mt-0.5"></span>
                     </div>
                 </div>
@@ -473,7 +473,7 @@
             </div>
             <div class="p-4 border-t border-slate-200 bg-slate-50 flex justify-end gap-2 rounded-b-lg">
                 <button onclick="exportManager.close()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-medium hover:bg-slate-50">Hủy</button>
-                <button onclick="exportManager.processExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xuất File DOCX</button>
+                <button onclick="exportManager.processExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xuất File</button>
             </div>
         </div>
     </div>
@@ -492,8 +492,8 @@
             <div class="p-4 border-t border-slate-200 bg-slate-50 flex justify-end gap-2 rounded-b-xl">
                 <button onclick="exportManager.cancelPreview()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-medium hover:bg-slate-50">Quay lại</button>
                 <button onclick="exportManager.confirmPdf()" class="px-4 py-2 bg-white border border-slate-300 rounded text-sm font-bold text-slate-700 hover:bg-slate-50"><i class="fas fa-file-pdf mr-1 text-red-600"></i> Xuất PDF</button>
-                                <button onclick="exportManager.confirmBaydi()" class="px-4 py-2 bg-emerald-600 hover:bg-emerald-700 text-white rounded text-sm font-bold shadow-sm"><i class="fas fa-file-excel mr-1"></i> Xuất Template BayDi</button>
-<button onclick="exportManager.confirmExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xác nhận xuất DOCX</button>
+                                <button onclick="exportManager.confirmBaydi()" class="px-4 py-2 bg-emerald-600 hover:bg-emerald-700 text-white rounded text-sm font-bold shadow-sm"><i class="fas fa-file-excel mr-1"></i> Xuất Temp</button>
+<button onclick="exportManager.confirmExport()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-bold shadow-sm">Xuất DOCX</button>
             </div>
         </div>
     </div>
